--- a/templates/cadastrar_aluno.html
+++ b/templates/cadastrar_aluno.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %} <!-- Supondo que você tenha um layout.html básico -->
+{% extends "layout.html" %}
 
 {% block titulo %}Cadastro de Novo Aluno{% endblock %}
 
@@ -6,7 +6,6 @@
     <h2>Formulário de Cadastro de Aluno</h2>
     <p>Preencha os dados abaixo para se cadastrar no sistema.</p>
 
-    <!-- O action="" envia os dados do formulário para a própria URL atual -->
     <form method="POST" action="">
         <label for="cpf">CPF (apenas números):</label><br>
         <input type="text" id="cpf" name="cpf" required minlength="11" maxlength="11"><br><br>
