--- a/templates/login.html
+++ b/templates/login.html
@@ -89,7 +89,7 @@
         {% endif %}
 
         <form method="POST" action="/login">
-            <input type="text" name="usuario" placeholder="Usuário" required>
+            <input type="text" name="email" placeholder="Email" required>
             <input type="password" name="senha" placeholder="Senha" required>
             <button type="submit">Entrar</button>
         </form>
