--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,5 +1,19 @@
 <!-- templates/layout.html -->
 <!DOCTYPE html>
+
+<style>
+footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    color: white;
+    text-align: center;
+    padding: 10px 0;
+    font-size: 14px;
+}
+</style>
+
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
